--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MyNotification</string>
+    <string name="channel_name">channel_name</string>
+    <string name="channel_description">channel_description_1</string>
 </resources>
