--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">MyNotification</string>
     <string name="channel_name">channel_name</string>
     <string name="channel_description">channel_description_1</string>
+
+    <string name="channel_name_2">channel_name_2</string>
+    <string name="channel_description_2">channel_description_2</string>
+
 </resources>
